--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
     </body>
     <script type="module" src="/tournamentUrls.js"></script>
-    <script type="module" src="/leageUrls.js"></script>
+    <script type="module" src="/leagueUrls.js"></script>
     <script type="module" src="/renderingPdf.js"></script>
     <script type="module" src="/index.js"></script>
 </html>
